--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,10 @@ hr:not([size]) {
   height: 1px;
 }
 
+.colored-toast.swal2-icon-success {
+  background-color: var(--bs-body-color) !important;
+}
+
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
