--- a/css/calendar.css
+++ b/css/calendar.css
@@ -48,3 +48,13 @@ h2 {
     background-color: #37373b !important;
     border-color: #37373b !important;
 }
+
+.fc-event {
+  position: relative;
+  display: block;
+  font-size: 0.85em;
+  line-height: 1.4;
+  background-color: #37373b !important;
+  border-radius: 3px;
+  border: 1px solid #37373b !important;
+}
